2015-05-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/install.texi:
	* ANNOUNCE:
	* INSTALL:
	* NEWS:
	Final updates for 1.24.8 release

2015-05-13  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Tidy compiler and preprocessor  detection and use
	warning for potentially broken compiler selection.
	* configure: regenerate

2015-05-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Version:
	* Documentation/news.texi:
	* Documentation/ReleaseNotes.gsdoc:
	Update in preparation for release
	* Source/Makefile.postamble:
	* Makefile.postamble:
	* GNUmakefile:
	Apply Yavor Doganov's patch to avoid re-run of configure when we do
	multiple 'make distclean' invocations (bug #29730).

2015-05-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZones/NSTimeZones.tar: updated

2015-05-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m:
	Fix for 64bit systems using TinyString objects ... missing
	implementations for common methods were making performance dire.

2015-05-02 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSSet.m
	* Source/NSCountedSet.m
	* Source/NSSet.m:
	Implement a private method -_countForObject: that enables to correctly
	check equality of NSSet and NSCountedSet (behaviour verified to match
	OS X). Fixes bug #43915.
	* Tests/base/NSCountedSet/equality.m: Test cases for equality behaviour.

2015-04-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m: Improve caching of common absolute timezones.

2015-04-28  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSDateFormatter.m: Properly reinstall the user provided
	date format when we need to recreate the icu-based date formatter.

2015-04-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: If an exception occurs while performing a
	selector in another thread, catch it and cleanup (and if the
	caller is waiting, pass the exception back to it).

2015-04-01  Wolfgang Lux  <wolfgang.lux@gmail.com>
